[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/active_spell/active_spell_control.gd" type="Script" id=1]
[ext_resource path="res://addons/active_spell/CreateSpellPopupMenu.gd" type="Script" id=2]
[ext_resource path="res://addons/active_spell/remove_spell_popup_menu.gd" type="Script" id=3]

[node name="Addons" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CreateSpellButton" type="Button" parent="."]
margin_right = 1280.0
margin_bottom = 20.0
text = "New Active Spell"

[node name="RemoveSpellButton" type="Button" parent="."]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 44.0
text = "Remove Active Spell"

[node name="CreateSpellPopupMenu" type="WindowDialog" parent="."]
margin_top = 48.0
margin_right = 48.0
margin_bottom = 49.0
size_flags_horizontal = 0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CreateSpellPopupMenu"]
margin_right = 241.2
margin_bottom = 48.0
rect_scale = Vector2( 1.00221, 0.985294 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CreateSpellPopupMenu/VBoxContainer"]
margin_right = 270.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CreateSpellPopupMenu/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 208.0
margin_bottom = 19.0
text = "Name of the active spell:            "

[node name="ActiveSpellName" type="LineEdit" parent="CreateSpellPopupMenu/VBoxContainer/HBoxContainer2"]
margin_left = 212.0
margin_right = 270.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 18
expand_to_text_length = true
placeholder_text = "repel_bullets"
placeholder_alpha = 0.573
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="CreateSpellPopupMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 270.0
margin_bottom = 48.0

[node name="CreateButton" type="Button" parent="CreateSpellPopupMenu/VBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 20.0
text = "Create"
align = 0

[node name="CancelButton" type="Button" parent="CreateSpellPopupMenu/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 20.0
text = "Cancel"
icon_align = 1

[node name="RemoveSpellPopupMenu" type="WindowDialog" parent="."]
visible = true
margin_top = 48.0
margin_right = 48.0
margin_bottom = 49.0
size_flags_horizontal = 0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="RemoveSpellPopupMenu"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="RemoveSpellPopupMenu/VBoxContainer"]
margin_right = 270.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 208.0
margin_bottom = 19.0
text = "Name of the active spell:            "

[node name="ActiveSpellName" type="LineEdit" parent="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer2"]
margin_left = 212.0
margin_right = 270.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 18
expand_to_text_length = true
placeholder_text = "repel_bullets"
placeholder_alpha = 0.573
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="RemoveSpellPopupMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 270.0
margin_bottom = 48.0

[node name="RemoveButton" type="Button" parent="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Remove"
align = 0

[node name="CancelButton" type="Button" parent="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 122.0
margin_bottom = 20.0
text = "Cancel"
icon_align = 1

[connection signal="pressed" from="CreateSpellButton" to="." method="_on_CreateSpellButton_pressed"]
[connection signal="pressed" from="RemoveSpellButton" to="." method="_on_RemoveSpellButton_pressed"]
[connection signal="pressed" from="CreateSpellPopupMenu/VBoxContainer/HBoxContainer/CreateButton" to="CreateSpellPopupMenu" method="_on_CreateButton_pressed"]
[connection signal="pressed" from="CreateSpellPopupMenu/VBoxContainer/HBoxContainer/CancelButton" to="CreateSpellPopupMenu" method="_on_CancelButton_pressed"]
[connection signal="pressed" from="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer/RemoveButton" to="RemoveSpellPopupMenu" method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="RemoveSpellPopupMenu/VBoxContainer/HBoxContainer/CancelButton" to="RemoveSpellPopupMenu" method="_on_CancelButton_pressed"]
